src/test/BadOverloads/BadOverloads.expected
error: BadOverloads.panda:2:5: expected operator '+' to have exactly one parameter
error: BadOverloads.panda:6:5: expected operator '+' to be a function
error: BadOverloads.panda:11:5: expected @class operator '+' to take class BadOverloads as at least one of its two parameters
error: BadOverloads.panda:16:5: expected @class operator '+' to have exactly two parameters
error: BadOverloads.panda:20:5: operator '=' cannot be declared '@class'
error: BadOverloads.panda:24:5: operator '=' must take exactly one parameter of type 'panda.core.Object'
error: BadOverloads.panda:27:5: expected operator '[]' to have exactly one parameter
error: BadOverloads.panda:30:5: expected operator '[]' to be a function
error: BadOverloads.panda:34:5: expected @class operator '[]' to have exactly one parameter
error: BadOverloads.panda:38:5: expected @class operator '[]' to be a function
error: BadOverloads.panda:41:5: operator '[]:=' may not be a function
error: BadOverloads.panda:45:5: operator '[]:=' may not return a value
error: BadOverloads.panda:49:5: expected operator '[]:=' to have exactly two parameters
error: BadOverloads.panda:53:5: indexed assignment is not permitted on classes
error: BadOverloads.panda:56:5: expected operator '[..]' to have zero to three parameters
error: BadOverloads.panda:60:5: expected parameter 'o' of operator '[..]' to be non-nullable
error: BadOverloads.panda:64:5: expected operator '[..]' to be a function
error: BadOverloads.panda:68:5: operator '[..]:=' may not return a value
error: BadOverloads.panda:76:5: slice assignment is not permitted on classes
error: BadOverloads.panda:79:5: operator 'test:=' may not return a value
error: BadOverloads.panda:82:5: expected operator 'test:=' to have exactly one parameter
error: BadOverloads.panda:85:5: expected operator '->>' to take no parameters
error: BadOverloads.panda:90:5: expected @class operator '->>' to return 'BadOverloads'
error: BadOverloads.panda:95:5: expected @class operator '->>' to take a single parameter
error: BadOverloads.panda:99:5: convert methods must have the '@self' annotation
25 errors
